--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>CodeEditorAppTest</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Code Editor</title>
+<script>
+  window.MonacoEnvironment = {
+    getWorkerUrl: function (workerId, label) {
+      return 'data:text/javascript;charset=utf-8,' + encodeURIComponent(`
+        self.MonacoEnvironment = { baseUrl: 'https://cdn.jsdelivr.net/npm/monaco-editor@0.42.0/min/' };
+        importScripts('https://cdn.jsdelivr.net/npm/monaco-editor@0.42.0/min/vs/base/worker/workerMain.js');
+      `);
+    }
+  };
+</script>
+<link rel="stylesheet" data-name="vs/editor/editor.main" href="https://cdn.jsdelivr.net/npm/monaco-editor@0.42.0/min/vs/editor/editor.main.css">
+<script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.42.0/min/vs/loader.min.js"></script>
+<script>
+  require.config({ paths: { 'vs': 'https://cdn.jsdelivr.net/npm/monaco-editor@0.42.0/min/vs' }});
+  require(['vs/editor/editor.main'],function(){});
+</script>
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
